--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -34,7 +34,24 @@ a {
 .bg-yellow {
     background-color: #ffe115;
 }
-
+.fontSize10{
+    font-size: 10px !important;
+}
+.fontSize12{
+    font-size: 12px !important;
+}
+.fontSize14{
+    font-size: 14px !important;
+}
+.fontSize15{
+    font-size: 15px !important;
+}
+.fontSize20{
+    font-size: 20px !important;
+}
+.fontSize25{
+    font-size: 25px !important;
+}
 .fw-bold-600 {
     font-weight: 600;
 }
