Ürün listesi linkleme ve fiyatlandırma gösterimi düzeltme

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -282,7 +282,7 @@ Image Slider Latest Added Product
 .wrapper-product .product-overlay {
     position: absolute;
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     top: 0;
     left: 0;
 }
